--- a/socialseed-validation-starter/pom.xml
+++ b/socialseed-validation-starter/pom.xml
@@ -9,29 +9,31 @@
     <parent>
         <groupId>com.socialseed</groupId>
         <artifactId>socialseed-platform</artifactId>
-        <version>0.1.0</version>
+        <version>0.1.0</version>  <!-- versión de tu BOM / parent -->
     </parent>
 
     <artifactId>socialseed-validation-starter</artifactId>
     <packaging>jar</packaging>
 
     <name>SocialSeed Validation Starter</name>
-    <description>Platform-level validation starter for SocialSeed</description>
+    <description>Spring Boot starter for platform-level validation in SocialSeed</description>
 
     <dependencies>
-
-        <!-- Bean Validation -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
-
-        <!-- Autoconfiguration support -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure</artifactId>
         </dependency>
-
     </dependencies>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/tuUsuario/socialseed-platform</url>
+        </repository>
+    </distributionManagement>
 </project>
