--- a/socialseed-validation-starter/pom.xml
+++ b/socialseed-validation-starter/pom.xml
@@ -9,10 +9,11 @@
     <parent>
         <groupId>com.socialseed</groupId>
         <artifactId>socialseed-platform</artifactId>
-        <version>0.1.0</version>  <!-- versión de tu BOM / parent -->
+        <version>0.1.0-SNAPSHOT</version>  <!-- Debe coincidir con el BOM -->
     </parent>
 
     <artifactId>socialseed-validation-starter</artifactId>
+    <version>0.1.0-SNAPSHOT</version>  <!-- Debe existir y coincidir -->
     <packaging>jar</packaging>
 
     <name>SocialSeed Validation Starter</name>
@@ -29,11 +30,11 @@
         </dependency>
     </dependencies>
 
-    <distributionManagement>
-        <repository>
-            <id>github</id>
-            <name>GitHub Packages</name>
-            <url>https://maven.pkg.github.com/daironpf/socialseed-platform</url>
-        </repository>
-    </distributionManagement>
+<!--    <distributionManagement>-->
+<!--        <repository>-->
+<!--            <id>github</id>-->
+<!--            <name>GitHub Packages</name>-->
+<!--            <url>https://maven.pkg.github.com/daironpf/socialseed-platform</url>-->
+<!--        </repository>-->
+<!--    </distributionManagement>-->
 </project>
